--- a/WPFApp1/Pages/MainDataReestrPage.xaml
+++ b/WPFApp1/Pages/MainDataReestrPage.xaml
@@ -107,19 +107,28 @@
                 
                 <Button Content="Добавить Запись"
                         Margin="3 3 1 3"
-                        Command="{Binding}"
-                        />
-                <Button Content="Добавить Запись"
-                        Margin="3 3 1 3"
                         Command="{Binding}"/>
                 <Button Content="Добавить Запись"
                         Margin="3 3 1 3"
                         Command="{Binding}"/>
+                <Button Content="Добавить Запись"
+                        Margin="3 3 1 3"
+                        Command="{Binding}"/>
+                <StackPanel Orientation="Horizontal">
+                    <ItemsControl ItemsSource="{Binding }">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate >
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{Binding First_Name}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </StackPanel>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="2">
             
-
             <Expander Header="Поиск:"
                       Margin="10 5 10 1">
                 <Border BorderThickness="1"
@@ -163,7 +172,6 @@
                                         BorderThickness="1" 
                                         CornerRadius="3">
                                     <Grid>
-
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="100"/>
                                             <ColumnDefinition Width="150"/>
@@ -180,7 +188,6 @@
                                             <TextBlock Text="{Binding Doc_Number, UpdateSourceTrigger=PropertyChanged}"
                                                    FontWeight="SemiBold"
                                                    HorizontalAlignment="Center"/>
-
                                         </StackPanel>
 
                                         <StackPanel Grid.Column="1" 
@@ -235,21 +242,55 @@
                                             </StackPanel>
                                             <Expander>
                                                 <Expander.Header>
-                                                    <TextBlock Text="Ответственные"/>
-                                                    <!--<StackPanel Orientation="Horizontal" >
-                                                        <Button Background="Transparent"               
-                                                                BorderBrush="Transparent"           
-                                                                Content="{Binding Respons_persons}"
-                                                                HorizontalAlignment="Left">
-                                                            <Button.ContentTemplate>
-                                                                <DataTemplate>
-                                                                    <Path Data="{Binding Source={StaticResource User}}"           
-                                                                          Stretch="UniformToFill"     
-                                                                          Fill="CadetBlue" />
-                                                                </DataTemplate>
-                                                            </Button.ContentTemplate>
-                                                        </Button>
-                                                    </StackPanel>-->
+                                                    <Grid>
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="*"/>
+                                                            <ColumnDefinition Width="auto"/>
+                                                        </Grid.ColumnDefinitions>
+                                                        <StackPanel Grid.Column="1"
+                                                                    Orientation="Horizontal">
+                                                            <TextBlock Text="Ответственные :"
+                                                                       VerticalAlignment="Center"
+                                                                       FontSize="12"
+                                                                       FontWeight="SemiBold"/>
+                                                            <ListBox ItemsSource="{Binding Respons_persons}"
+                                                                     BorderBrush="Transparent"
+                                                                     Background="Transparent"
+                                                                     Margin="12 0 0 0">
+                                                                <ListBox.ItemsPanel>
+                                                                    <ItemsPanelTemplate>
+                                                                        <WrapPanel Orientation="Horizontal"/>
+                                                                    </ItemsPanelTemplate>
+                                                                </ListBox.ItemsPanel>
+                                                                <ListBox.ItemTemplate>
+                                                                    <DataTemplate>
+                                                                        <Button x:Name="Mbutton"
+                                                                                Background="Transparent"
+                                                                                BorderBrush="Transparent"
+                                                                                Content="{Binding Person_stats}">
+                                                                            <Button.ToolTip>
+                                                                                <ToolTip Placement="top" 
+                                                                                         ToolTipService.InitialShowDelay="3">
+                                                                                    <StackPanel Orientation="Horizontal">
+                                                                                        <TextBlock Text="{Binding First_Name}" Margin="5 0 0 0"/>
+                                                                                        <TextBlock Text="{Binding Last_Name}" Margin="5 0 0 0"/>
+                                                                                        <TextBlock Text="{Binding Sub_Name}" Margin="5 0 0 0"/>
+                                                                                    </StackPanel>
+                                                                                </ToolTip>
+                                                                            </Button.ToolTip>
+                                                                            <Button.ContentTemplate>
+                                                                                <DataTemplate>
+                                                                                    <Path Data="{Binding Source={StaticResource ResourceKey=User}}"
+                                                                                          Stretch="UniformToFill"
+                                                                                          Fill="CadetBlue" />
+                                                                                </DataTemplate>
+                                                                            </Button.ContentTemplate>
+                                                                        </Button>
+                                                                    </DataTemplate>
+                                                                </ListBox.ItemTemplate>
+                                                            </ListBox>
+                                                        </StackPanel>
+                                                    </Grid>
                                                 </Expander.Header>
 
                                                 <StackPanel Orientation="Vertical">
@@ -257,7 +298,6 @@
                                                         <ItemsControl.ItemTemplate>
                                                             <DataTemplate>
                                                                 <StackPanel Orientation="Horizontal">
-                                                                    <Border/>
                                                                     <Button Background="Transparent"
                                                                             BorderBrush="Transparent"
                                                                             Content="{Binding Person_stats}">
