--- a/WPFApp1/Style/DataGridView.xaml
+++ b/WPFApp1/Style/DataGridView.xaml
@@ -85,7 +85,7 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="DarkCyan"/>
         <Setter Property="FontSize" Value="12" />
-        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="Margin" Value="10,5"/>
         <Style.Triggers>
