Добавлены триггеры, Экономическая Часть(Завершена).

--- a/WPFApp1/Pages/AllContractsPage.xaml
+++ b/WPFApp1/Pages/AllContractsPage.xaml
@@ -58,7 +58,7 @@
                 <TextBlock Text="Фильтры"
                                Width="50"
                                Height="20"
-                               Margin="5 2 2 2"/>
+                               Margin="10 2 2 2"/>
                 <TextBox Name="ContractFilteredText"
                          TextChanged="ContractFilteredText_TextChanged"
                              Margin="2 2 2 2"
@@ -95,6 +95,15 @@
                                     <StackPanel Orientation="Vertical"
                                                 Grid.Column="0"
                                                 VerticalAlignment="Center">
+                                        <DockPanel HorizontalAlignment="Center">
+                                            <Label Content="{Binding Main_Reestr.Doc_Number}"
+                                                   Height="20"
+                                                   FontSize="12"
+                                                   Padding="1"
+                                                   Foreground="#a3a3a4"
+                                                   Margin="5 0 0 0"
+                                                   FontWeight="SemiBold"/>
+                                        </DockPanel>
                                         <TextBlock Text="Номер Договора"
                                                    HorizontalAlignment="Center"
                                                    Foreground="#a3a3a4"/>
