--- a/WPFApp1/DialogWindows/ContractRespPersonsWindowDialog.xaml
+++ b/WPFApp1/DialogWindows/ContractRespPersonsWindowDialog.xaml
@@ -76,7 +76,7 @@
                               Fill="Black"
                               Stretch="Uniform"/>
                         </DataTemplate>
-                    </Button.ContentTemplate> >
+                    </Button.ContentTemplate>
                 </Button>
                 <Button Height="40"
                         Width="40"
