--- a/WPFApp1/Pages/Contract/ContractPage.xaml
+++ b/WPFApp1/Pages/Contract/ContractPage.xaml
@@ -33,7 +33,7 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="380"/>
                             <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="310"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
@@ -246,7 +246,7 @@
                         <GroupBox  Header="Экономическая часть:"         
                                    HorizontalAlignment="Left"        
                                    Height="200" 
-                                   Width="250"     
+                                   Width="290"     
                                    Margin="10,5,5,10"     
                                    VerticalAlignment="Top"    
                                    Grid.Column="2">
@@ -257,42 +257,53 @@
                                            TextAlignment="Left"
                                            Height="20" 
                                            />
-                                <TextBox Text="{Binding CurrentContractAmount, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True, Mode=TwoWay, StringFormat={}{0:F2}}"                        
-                                     Margin="5 1 5 5 " 
-                                     Padding="1 1 1 1" 
-                                     TextAlignment="Left"  
-                                     Height="22"
-                                     Width="auto" 
-                                     VerticalAlignment="Top"  
-                                     FontWeight="Bold"
-                                     BorderThickness="1"/>
+                                <DockPanel>
+                                    <TextBox Text="{Binding CurrentContractAmount, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True, Mode=TwoWay, StringFormat={}{0:F2}}"                        
+                                             Margin="2"
+                                             DockPanel.Dock="Left"
+                                             Padding="1 1 1 1" 
+                                             TextAlignment="Center"  
+                                             Height="22"
+                                             Width="200" 
+                                             VerticalAlignment="Top"  
+                                             FontWeight="Bold"
+                                             Foreground="{Binding ElementName=currency, Path=SelectedItem.Color}"
+                                             BorderThickness="1"/>
+                                    <TextBlock Text="{Binding ElementName=currency, Path=Text, UpdateSourceTrigger=PropertyChanged}"
+                                               Margin="2"
+                                               Height="22"
+                                               FontSize="14"
+                                               Foreground="{Binding ElementName=currency, Path=SelectedItem.Color}"
+                                               FontWeight="SemiBold"
+                                               VerticalAlignment="Stretch"
+                                               HorizontalAlignment="Stretch"/>
+                                </DockPanel>
+                                <TextBlock Text="Тип валюты по договору:"
+                                           Margin="5 5 5 1 "
+                                           TextAlignment="Left"
+                                           Height="20"/>
+                                <DockPanel Margin="5">
+                                    <ComboBox ItemsSource="{Binding Currency_Types, UpdateSourceTrigger=PropertyChanged}"
+                                              x:Name="currency"
+                                              Margin="2"
+                                              DockPanel.Dock="Left"
+                                              Width="80"
+                                              FontWeight="SemiBold"
+                                              Foreground="{Binding ElementName=currency, Path=SelectedItem.Color}"
+                                              DisplayMemberPath="Type"
+                                              SelectedValuePath="id"
+                                              SelectedValue ="{Binding Current_Currency, UpdateSourceTrigger=PropertyChanged}">
+                                    </ComboBox>
+                                    <TextBlock Text="{Binding ElementName=currency, Path=SelectedItem.decription_type, UpdateSourceTrigger=PropertyChanged}"
+                                               Margin="3"
+                                               Foreground="{Binding ElementName=currency, Path=SelectedItem.Color}"
+                                               FontWeight="SemiBold"
+                                               Padding="10 0 0 0"/>
+                                </DockPanel>
                             </StackPanel>
+                           
                         </GroupBox>
-                        <GroupBox  Header="доп колонка:"         
-                                   HorizontalAlignment="Left"        
-                                   Height="200" 
-                                   Width="250"     
-                                   Margin="10,5,5,10"     
-                                   VerticalAlignment="Top"    
-                                   Grid.Column="3">
-                            <StackPanel Orientation="Vertical">
-
-                                <TextBlock Text="дополнительно:"
-                                       Margin="5 5 5 1 "
-                                       TextAlignment="Left"
-                                       Height="20" 
-                                       />
-                                <TextBox Text=" "                        
-                                     Margin="5 1 5 5 " 
-                                     Padding="1 1 1 1" 
-                                     TextAlignment="Left"  
-                                     Height="22"
-                                     Width="auto" 
-                                     VerticalAlignment="Top"  
-                                     FontWeight="Bold"
-                                     BorderThickness="1"/>
-                            </StackPanel>
-                        </GroupBox>
+                        
                     </Grid>
                 </TabItem>
 
